--- a/package.json
+++ b/package.json
@@ -5,25 +5,12 @@
   "author": "longocsl96",
   "license": "MIT",
   "repository": "longocsl96/base-app",
-  "main": "dist/index.js",
-  "module": "dist/index.modern.js",
-  "source": "src/index.js",
+  "main": "index.js",
+  "module": "index.modern.js",
   "engines": {
     "node": ">=10"
   },
-  "scripts": {
-    "build": "microbundle-crl --no-compress --format modern --css-modules false,cjs",
-    "start": "microbundle-crl watch --no-compress --css-modules false --format modern,cjs",
-    "prepare": "run-s build",
-    "test": "run-s test:unit test:lint test:build",
-    "test:build": "run-s build",
-    "test:lint": "eslint .",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
-  },
-  "dependencies": {
+  "peerDependencies": {
     "axios": "^0.19.2",
     "axios-cache-adapter": "^2.5.0",
     "axios-extensions": "^3.1.3",
@@ -35,7 +22,6 @@
     "history": "^4.10.1",
     "intl-messageformat": "^7.8.4",
     "jsonwebtoken": "~8.5.1",
-    "jwt-decode": "^3.1.2",
     "moment": "~2.24.0",
     "postcss-rtl": "^1.5.0",
     "prettier": "^2.0.4",
@@ -45,7 +31,6 @@
     "react": "^16.13.0",
     "react-dom": "^16.12.0",
     "react-feather": "~2.0.3",
-    "react-flatpickr": "^3.10.6",
     "react-hammerjs": "^1.0.1",
     "react-intl": "^3.11.0",
     "react-perfect-scrollbar": "^1.5.5",
@@ -66,15 +51,7 @@
     "redux-persist-cookie-storage": "^1.0.0",
     "redux-saga": "1.1.3",
     "redux-thunk": "~2.3.0",
-    "styled-components": "^5.0.1"
-  },
-  "devDependencies": {
-    "microbundle-crl": "^0.13.10",
-    "node-sass": "^4.14.1",
-    "react-app-rewired": "^2.1.5",
-    "run-s": "0.0.0"
-  },
-  "files": [
-    "dist"
-  ]
+    "styled-components": "^5.0.1",
+    "jwt-decode": "^3.1.2"
+  }
 }
