--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "redux-persist-cookie-storage": "^1.0.0",
     "redux-saga": "1.1.3",
     "redux-thunk": "~2.3.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2"
   }
 }
