--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "redux-thunk": "~2.3.0",
     "styled-components": "^5.0.1",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2"
+    "react-google-login": "^5.2.2",
+    "react-text-mask": "^5.4.3",
+    "text-mask-addons": "^3.8.0"
   }
 }
