--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-react-intl": "^5.1.18",
     "bootstrap": "^4.4.1",
     "classnames": "~2.2.6",
+    "firebase": "^8.5.0",
     "formik": "^2.1.3",
     "gh-pages": "^2.2.0",
     "history": "^4.10.1",
@@ -55,6 +56,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-text-mask": "^5.4.3",
-    "text-mask-addons": "^3.8.0"
+    "text-mask-addons": "^3.8.0",
+    "react-otp-input": "^2.3.0"
   }
 }
