--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hammerjs": "^1.0.1",
     "react-intl": "^3.11.0",
     "react-perfect-scrollbar": "^1.5.5",
+    "react-qrcode-logo": "^2.4.0",
     "react-redux": "~7.1.3",
     "react-ripples": "^2.2.1",
     "react-router-dom": "~5.1.2",
